2008-10-10  Christian Hergert  <chris@dronelabs.com>

	* SyntaxModes/PythonSyntaxMode.xml: Python does not support multiline
	comments.
	* SyntaxModes/CSyntaxMode.xml: Add NULL as a literal keyword.

2008-10-10  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/Caret.cs:
	* Mono.TextEditor/CaretMoveActions.cs:
	* Mono.TextEditor/FoldMarkerMargin.cs: fixed 'Bug 434165 - Page UP/Down
	Key on top/bottom of a code folded make the region Unfolded'.

2008-10-08  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs: fixed 'Bug 432845 - Find and
	  replace doesn't work'.

2008-10-07  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor.mdp, Makefile.am: Updated.
	* Mono.TextEditor/BookmarkActions.cs,
	  Mono.TextEditor/CaretMoveActions.cs,
	  Mono.TextEditor/ClipboardActions.cs,
	  Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor/DeleteActions.cs, Mono.TextEditor/EditAction.cs,
	  Mono.TextEditor/EditMode.cs, Mono.TextEditor/SelectionActions.cs,
	  Mono.TextEditor/SimpleEditMode.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/ViMode.cs:
	  Switch to a delegate-based API so we aren't always newing up
	  objects in order to perform actions. Allows actions to be invoked
	  more easily, and tidies up API. Group actions logically in static
	  classes.

2008-10-07  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditorData.cs: fixed 'Bug 430805 - Cannot
	  middle-click-paste between source editors'.

2008-10-06  Gabriel Burt <gburt@novell.com> 

	* Mono.TextEditor/ViMode.cs: Added keybindings for ctrl-d and ctrl-u
	  (pg dn/up), % (go to matching bracket), and G (go to eof), and fix
	  keybinding for _ to go to first non-whitespace char instead of
	  start of line

2008-10-06  Michael Hutchinson <mhutchinson@novell.com> 

	* Mono.TextEditor/ViMode.cs, Mono.TextEditor/TextEditor.cs,
	  Mono.TextEditor/EditMode.cs: Add a way for the EditMode to pre-empt