@@ -52,6 +52,7 @@
     <File name="MonoDevelop.SourceEditor/ClassQuickFinder.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.SourceEditor.Extension/TemplateCodon.cs" subtype="Code" buildaction="Compile" />
     <File name="MonoDevelop.SourceEditor.Extension/TemplateExtensionNodeLoader.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoDevelop.SourceEditor/IdeViMode.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="False" refto="Mono.TextEditor" />
