@@ -1,3 +1,7 @@
+2008-10-10  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* Mono.TextEditor/ViMode.cs: Add support for simple vi commands.
+
 2008-10-10  Christian Hergert  <chris@dronelabs.com>
 
 	* SyntaxModes/PythonSyntaxMode.xml: Python does not support multiline
